sparse su(N) Lie-algebra elements

--- a/sparse_lie_algebra.ipynb
+++ b/sparse_lie_algebra.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8Sk9vvlkx73hMoR9RuBNF",
+      "authorship_tag": "ABX9TyPpVwF2SZ1wGDj64tXH60Dp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## In this work, we generate the sparse $\\mathfrak{su}(N)$ Lie-Algebra-elements for arbtirary $N$ in the fundamental-representation, $t^a_{\\alpha\\beta}$, with $a$ enumerating the elements, and $\\alpha\\beta$ give the spinor-basis. With-or-without the Jordan-Wigner transformation, $\\textit{e.g.}$ $S^\\pm = \\frac{\\sigma_x \\pm i\\sigma_y}{2}$.\n",
+        "\n",
+        "j.candanedo 4/11/2023"
+      ],
+      "metadata": {
+        "id": "0IcNIt_7Wbpy"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "DOlP8uT-u78M"
       },
@@ -92,7 +103,7 @@
       "metadata": {
         "id": "41GgDbtlu_Up"
       },
-      "execution_count": 92,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -149,9 +160,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d6b9df74-5f26-4832-f23b-4b1e7e59a0ae"
+        "outputId": "43c68ae9-945d-4e8f-9a16-2e81df211510"
       },
-      "execution_count": 89,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -161,7 +172,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 89
+          "execution_count": 3
         }
       ]
     },
@@ -239,9 +250,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gERiP-HcOOuK",
-        "outputId": "09df6886-43cb-4a76-cae3-447a86313e07"
+        "outputId": "7fbec6a7-ab3f-4250-fc14-c2f832bf00fe"
       },
-      "execution_count": 104,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -256,7 +267,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 104
+          "execution_count": 4
         }
       ]
     },
@@ -266,7 +277,7 @@
       "metadata": {
         "id": "xcu6JbBFU7i6"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     }
   ]
