--- a/lie_algebra_su.ipynb
+++ b/lie_algebra_su.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "LieAlgebra.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN58D6AsjWNIvY1A3EtGljs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Adjoint Representation of $\\mathfrak{su}(n)$ Lie Algebras"
+        "# Fundamental (Dense) Representation of $\\mathfrak{su}(n)$ Lie Algebras"
       ],
       "metadata": {
         "id": "Rmu-vw3iYwIO"
@@ -54,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "d_NlbkDHYtw8"
       },
@@ -136,7 +135,7 @@
         "id": "FAwPNDBIcRn8",
         "outputId": "55047af2-3eb0-4b52-8312-a4af10342738"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +175,7 @@
       "metadata": {
         "id": "w-8sFe2yAYzC"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +206,7 @@
         "id": "_Y94eTuaAE3Y",
         "outputId": "68e7af49-832e-4609-b22d-e278a780871f"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -251,7 +250,7 @@
         "id": "Uzmcrfve_L-N",
         "outputId": "fe06c53a-9792-47a9-a7ac-81d5f4c7fa6a"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +306,7 @@
         },
         "outputId": "34a52092-5ab5-4e72-e241-1555f03309da"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,9 +322,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "vRvJXSaSDNNb"
       },
