--- a/sparse_lie_algebra.ipynb
+++ b/sparse_lie_algebra.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpVwF2SZ1wGDj64tXH60Dp",
+      "authorship_tag": "ABX9TyN9bzDwF1gkqTzrA71Ribii",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## In this work, we generate the sparse $\\mathfrak{su}(N)$ Lie-Algebra-elements for arbtirary $N$ in the fundamental-representation, $t^a_{\\alpha\\beta}$, with $a$ enumerating the elements, and $\\alpha\\beta$ give the spinor-basis. With-or-without the Jordan-Wigner transformation, $\\textit{e.g.}$ $S^\\pm = \\frac{\\sigma_x \\pm i\\sigma_y}{2}$.\n",
+        "## Sparse-Tensor fundamental-representation of $\\mathfrak{su}(N)$\n",
+        "\n",
+        "###In this work, we generate the sparse $\\mathfrak{su}(N)$ Lie-Algebra-elements for arbtirary $N$ in the fundamental-representation, $t^a_{\\alpha\\beta}$, with $a$ enumerating the elements, and $\\alpha\\beta$ give the spinor-basis. With-or-without the Jordan-Wigner transformation, *e.g.* $S^\\pm = \\frac{\\sigma_x \\pm i\\sigma_y}{2}$. The elements are placed in the usual order (of Pauli, for $N=2$, and Gellman, for $N=3$, such that the smaller $\\mathfrak{su}(N)$ sub-algebras are transparent, *i.e.* the off-diagonal-elements are followed by their Cartan-element.\n",
         "\n",
         "j.candanedo 4/11/2023"
       ],
